--- a/index.html
+++ b/index.html
@@ -245,20 +245,58 @@
     /* ✅ Responsivo para telas menores */
     @media (max-width: 600px) {
       body {
-        padding: 20px 10px;
+        padding: 16px 10px;
       }
 
       .data-boxes {
         flex-direction: column;
+        gap: 12px;
+      }
+
+      .data-box {
+        padding: 20px 12px;
+        font-size: 13px;
+      }
+
+      .box {
+        padding: 25px 20px;
+      }
+
+      .identify-button {
+        padding: 16px;
+        font-size: 15px;
       }
 
       .action-box {
         min-width: 100%;
+        padding: 24px 16px;
+      }
+
+      .action-title {
+        font-size: 16px;
+      }
+
+      .action-subtext {
+        font-size: 13px;
+      }
+
+      .action-button {
+        padding: 14px;
+        font-size: 15px;
       }
 
       .logo img {
-        width: 40vw;
-        max-width: 160px;
+        width: 100px;
+        max-width: 40vw;
+      }
+
+      .status-text {
+        font-size: 16px;
+      }
+
+      .next-round,
+      .optional-text {
+        font-size: 14px;
       }
     }
   </style>
