--- a/index.html
+++ b/index.html
@@ -186,16 +186,20 @@
       justify-content: center;
       width: 100%;
       max-width: 720px;
+      align-items: center;
     }
 
     .action-box {
       flex: 1;
       min-width: 300px;
+      max-width: 720px;
+      width: 100%;
       background-color: var(--dark-bg);
       border-radius: 16px;
       padding: 30px 20px;
       text-align: center;
       box-shadow: 0 0 15px #000;
+      box-sizing: border-box;
     }
 
     .action-title {
@@ -269,6 +273,7 @@
 
       .action-box {
         width: 100%;
+        max-width: 720px;
         min-width: unset;
         padding: 24px 16px;
         margin-bottom: 16px;
@@ -277,6 +282,7 @@
       .button-group {
         flex-direction: column;
         gap: 0;
+        align-items: center;
       }
 
       .action-title {
