descrição da atualização

--- a/login.html
+++ b/login.html
@@ -1,78 +1,202 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url('imagens/cassino.jpg') no-repeat center center fixed;
+      background-size: cover;
+      opacity: 0.85;
+      filter: brightness(0.25) blur(2px);
+      z-index: -2;
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: -1;
+    }
+
+    .login-container {
+      width: 100%;
+      max-width: 400px;
+      background-color: rgba(20, 20, 20, 0.85);
+      padding: 35px 25px;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0, 191, 255, 0.5);
+      backdrop-filter: blur(10px);
+      color: #ffffff;
+      text-align: center;
+      animation: fadeIn 1s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h2 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #00bfff;
+      text-shadow: 0 0 15px #00bfff88;
+    }
+
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 14px;
+      margin-bottom: 14px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      background: #1b1b1b;
+      color: #e0e0e0;
+      box-shadow: inset 0 0 6px rgba(0, 191, 255, 0.4);
+      transition: 0.3s ease;
+    }
+
+    input::placeholder {
+      color: #bbbbbb;
+    }
+
+    input:focus {
+      outline: none;
+      background: #252525;
+      box-shadow: 0 0 10px #00bfff;
+    }
+
+    button[type="submit"] {
+      width: 100%;
+      padding: 14px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #00bfff, #1e90ff);
+      color: #fff;
+      cursor: pointer;
+      transition: background 0.4s ease, transform 0.2s;
+      box-shadow: 0 0 10px #00bfff;
+    }
+
+    button:hover {
+      background: linear-gradient(90deg, #1e90ff, #00bfff);
+      transform: scale(1.03);
+    }
+
+    #error-message {
+      color: #ff4d4d;
+      font-size: 14px;
+      margin-top: 12px;
+      display: none;
+    }
+
+    @media (max-width: 480px) {
+      h2 {
+        font-size: 22px;
+      }
+
+      input, button {
+        font-size: 15px;
+        padding: 12px;
+      }
+
+      .login-container {
+        padding: 30px 20px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Senha" required>
-            <button type="submit">Entrar</button>
-        </form>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Senha" required />
+      <button type="submit">Entrar</button>
+    </form>
+    <p id="error-message"></p>
+  </div>
 
-        <!-- Parágrafo para exibir a mensagem de erro -->
-        <p id="error-message" style="color: red; display: none;"></p> <!-- Inicialmente oculto -->
+  <!-- Firebase SDK via CDN -->
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js';
+    import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/9.9.3/firebase-auth.js';
 
-    </div>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCuZF1y9mSTfW6oRo0UAZ-SDnE4dUkQKZk",
+      authDomain: "aplicativo-magnata.firebaseapp.com",
+      projectId: "aplicativo-magnata",
+      storageBucket: "aplicativo-magnata.firebasestorage.app",
+      messagingSenderId: "1036873396258",
+      appId: "1:1036873396258:web:4997f5a56c75158db55a7b",
+      measurementId: "G-8LGZBWZYWY"
+    };
 
-    <!-- Firebase SDK via CDN -->
-    <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js';
-        import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/9.9.3/firebase-auth.js';
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-        // Configuração do Firebase
-        const firebaseConfig = {
-          apiKey: "AIzaSyCuZF1y9mSTfW6oRo0UAZ-SDnE4dUkQKZk",
-          authDomain: "aplicativo-magnata.firebaseapp.com",
-          projectId: "aplicativo-magnata",
-          storageBucket: "aplicativo-magnata.firebasestorage.app",
-          messagingSenderId: "1036873396258",
-          appId: "1:1036873396258:web:4997f5a56c75158db55a7b",
-          measurementId: "G-8LGZBWZYWY"
-        };
+    document.getElementById('loginForm').addEventListener('submit', (e) => {
+      e.preventDefault();
 
-        // Inicializa o Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
-        // Lógica de login
-        document.getElementById('loginForm').addEventListener('submit', (e) => {
-            e.preventDefault();
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          const user = userCredential.user;
+          console.log('Usuário logado:', user);
+          window.location.href = 'https://magnata-sable.vercel.app/';
+        })
+        .catch((error) => {
+          const errorCode = error.code;
+          const errorElement = document.getElementById('error-message');
 
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
+          if (errorCode === 'auth/too-many-requests') {
+            errorElement.textContent = 'Muitas tentativas de login. Tente novamente mais tarde.';
+          } else {
+            errorElement.textContent = 'Login incorreto. Tente novamente.';
+          }
 
-            signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    console.log('Usuário logado:', user);
-
-                    // Redireciona para o seu site hospedado no Vercel
-                    window.location.href = 'https://magnata-sable.vercel.app/';
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorElement = document.getElementById('error-message');
-                    
-                    if (errorCode === 'auth/too-many-requests') {
-                        // Caso de erro de muitas tentativas de login
-                        errorElement.textContent = 'Muitas tentativas de login. Tente novamente mais tarde.';
-                    } else {
-                        // Para outros erros de login, como e-mail ou senha incorretos
-                        errorElement.textContent = 'Login incorreto. Tente novamente.';
-                    }
-
-                    errorElement.style.display = 'block'; // Torna a mensagem visível
-
-                    // Log dos erros para depuração (opcional)
-                    console.error('Erro no login:', error);
-                });
+          errorElement.style.display = 'block';
+          console.error('Erro no login:', error);
         });
-    </script>
+    });
+  </script>
 </body>
 </html>
