--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       flex-direction: column;
       align-items: center;
       padding: 40px 20px;
+      visibility: hidden;
     }
 
     .logo {
