Atualização no login

--- a/login.html
+++ b/login.html
@@ -188,9 +188,9 @@
           const errorElement = document.getElementById('error-message');
 
           if (errorCode === 'auth/too-many-requests') {
-            errorElement.textContent = 'Muitas tentativas de login. Tente novamente mais tarde.';
+            errorElement.textContent = 'Muitas tentativas de login. Tente novamente mais tarde!';
           } else {
-            errorElement.textContent = 'Login incorreto. Tente novamente.';
+            errorElement.textContent = 'Login incorreto. Tente novamente!';
           }
 
           errorElement.style.display = 'block';
