Atualização no index

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           if (count <= 0) {
             clearInterval(interval);
             button.disabled = false;
-            text.textContent = '⚡ IDENTIFICAR RESULTADO';
+            text.textContent = '🎲 IDENTIFICAR RESULTADO';
             button.classList.add('pulsing');
           }
         }, 1000);
